# FastType

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  terminal.c
src/configs/: initialMsg.txt  status.txt
src/debug/: debug.c
src/debug/include/: debug.h
src/include/: terminal.h
src/stats/: stats.c
src/stats/include/: stats.h
